src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&family=Roboto:wght@400;500;700&display=swap");

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: var(--font-main);
  transition: all 0.2s linear;
  scroll-behavior: smooth;
  word-break: break-word;
}

body {
  overflow-x: hidden;
  color: var(--text-color-default);
}

body::-webkit-scrollbar {
  width: 0.375rem;
}

body::-webkit-scrollbar-track {
  background: var(--color-primary);
}

body::-webkit-scrollbar-thumb {
  width: 0.375rem;
  background: #97c001;
}

.app {
  --nav-items: 1.2rem;
  --heading-1: 2.5rem;
  --heading-2: 1.5rem;
  --body-1: 1.2rem;
  --heading-content: 1.5rem;
  --body-content: 1rem;
  --footer-1: 1.32rem;
  --footer-2: 0.85rem;
  --color-primary: #ffffff;
  --color-secondary: #141c3a;
  --color-accent-1: #7510f7;
  --color-accent-2: #5be9b9;
  --color-accent-3: #6e07f3;
  --text-color-primary: #28286d;
  --text-color-secondary: #141c3a;
  --text-color-default: #ffffff;
  --text-footer: #e2cdfc;
  --separator-color: #e6ecf8;
  --color-scrollbar-thumb: #141c3a;
  --font-pre: "Poppins", sans-serif;
  --font-main: "Roboto", sans-serif;
  min-height: 100vh;
  width: 100vw;
  background-color: var(--color-primary);
  color: var(--text-color-default);
}

.app.dark {
  --color-primary: #000000;
  --color-secondary: #f4f5f7;
  --color-accent-1: #ff4c00;
  --color-accent-2: #fdc951;
  --color-accent-3: #151515;
  --text-color-primary: #f0eeee;
  --text-color-secondary: #fdc951;
  --text-color-default: #ffffff;
  --text-footer: #272727;
  --separator-color: #969696;
  --color-scrollbar-thumb: #fdc951;
}

.app.dark .skills {
  background-color: var(--color-accent-3);
}

.app.dark .skill-title {
  color: var(--color-accent-1);
}

.app.dark .skill-icon {
  color: var(--color-accent-3);
}

.app.dark .coding-profile,
.app.dark .content,
.app.dark .content a {
  color: var(--color-accent-3);
}

.app.dark .content a:hover {
  color: var(--text-color-default);
}

nav {
  margin-bottom: 1rem;
}

.nav-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem;
  height: 100%;
  width: 100%;
  flex-direction: row-reverse;
}

.logo-header {
  width: 100px;
}

ul {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: calc(var(--nav-items) * 2);
}

nav li {
  list-style: none;
  font-size: var(--nav-items);
  color: var(--text-color-primary);
  cursor: pointer;
  padding: 0.25rem 0.5rem;
  position: relative;
  overflow: hidden;
  word-wrap: normal;
  word-break: normal;
  text-align: center;
}

nav li::after {
  content: "";
  position: absolute;
  height: 0.2rem;
  width: 100%;
  background-color: var(--color-accent-1);
  bottom: 0;
  left: 100%;
}

nav li:hover::after {
  left: 0;
}

#theme-toggle {
  display: none;
}

.theme-toggler {
  background-color: var(--color-accent-1);
  width: 2.5rem;
  height: 1rem;
  position: relative;
  cursor: pointer;
  border-radius: 2rem;
}

.ball {
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  background-color: var(--color-primary);
  filter: drop-shadow(0 0 0.1rem var(--color-secondary));
  position: absolute;
  top: 50%;
  left: 0;
  transform: translate(-50%, -50%);
}

.ball.checked {
  transform: translate(110%, -50%);
}

.hamburger {
  width: 2rem;
  height: calc(0.25rem * 3 + 1rem);
  cursor: pointer;
  position: relative;
  display: grid;
  place-items: center;
}

.line {
  width: 2rem;
  height: 0.25rem;
  background-color: var(--color-secondary);
}

.hamburger::before,
.hamburger::after {
  position: absolute;
  top: 0rem;
  content: "";
  background-color: var(--color-secondary);
  width: 100%;
  height: 0.25rem;
}

.hamburger::after {
  top: auto;
  bottom: 0rem;
}

.menu {
  position: absolute;
  top: 2.5rem;
  right: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--color-primary);
  box-shadow: 0 0 1rem var(--color-secondary);
  padding: 1.5rem;
  z-index: 100;
}

.close-btn {
  position: absolute;
  width: 0.75rem;
  height: 0.75rem;
  top: 0.5rem;
  right: 0.5rem;
}

.close-btn::before,
.close-btn::after {
  position: absolute;
  width: 0.1rem;
  height: 0.75rem;
  content: "";
  background-color: var(--color-secondary);
}

.close-btn::before {
  left: 50%;
  transform: rotate(45deg) translateX(-50%);
}

.close-btn::after {
  right: 50%;
  transform: rotate(-45deg) translateX(50%);
}

.text-box {
  display: flex;
  justify-content: center;
  align-items: center;
}

.text-box > pre {
  font-size: var(--heading-1);
  color: var(--text-color-secondary);
  font-family: var(--font-pre);
  font-weight: bold;
  max-width: 100%;
  word-wrap: break-word;
  white-space: pre-wrap;
  padding: 0 0.5rem;
}

.cursor {
  transform: translateY(0.25rem);
  display: inline-block;
  width: 0.2rem;
  height: var(--heading-1);
  background-color: var(--color-accent-1);
}

.home-container {
  margin-top: 10rem;
}

.home {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-direction: column;
  gap: 10rem;
}

.home img {
  width: min(600px, 90%);
  object-fit: contain;
}

section {
  width: 100%;
}

.about-container {
  background-color: var(--color-accent-1);
  padding: 5rem 0 2.5rem;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.about-me {
  padding: 1.25rem;
  padding-bottom: 0rem;
  max-width: 60ch;
  color: var(--text-color-default);
  font-size: var(--body-1);
  margin: 2rem auto 0;
  text-align: justify;
  line-height: 2;
}

h1,
h2 {
  text-align: center;
}

.about-container h1,
.skills-wrapper h1 {
  font-size: var(--heading-1);
  font-weight: bold;
  margin: auto;
}

.skills-wrapper h1 {
  margin-bottom: 3.25rem;
}
/* ... */

